2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Remove out of date (not working with recent autotools) autogen.sh,
	  use: "autoreconf -i -f -v" instead.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Better tracking of seekable state in mms.c, return immediately
	  from the seek functions when they gat called on a non seekable
	  stream.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Do some minimal sanity checks on the information parsed from the
	  asf header.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Add mmsx.c / .h, mmsx.c is a small wrapper around mms.c and mmsh.c
	  The mmsx functions provide transparent access to both protocols
	  so that programs who wish to support both can do so with a single
	  code path if desired.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Add an atrribute to the mms / mmsh structs to track if the
	  stream is seekable and export it. 

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Add support for both time and byte offset based mmsh seeking!

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Export (add get methods for) asf header- and packet-length.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Calculate length returned by mss_get_length() instead if returning
	  the filesize from the header. The filesize usually is bigger then
	  then the header + all packets because the end of the file contains
	  time->packet offset lookup tables, however these tables are not
	  accessible through mms.

2007-12-11  Hans de Goede <j.w.r.degoede@hhs.nl>

	* Some off_t changes so that applications no longer need to be
	  have _FILE_OFFSET_BITS defined to 64 when compiling, when they
	  will be linked against a libmms which did have _FILE_OFFSET_BITS
	  defined to 64 during its compile (which gets defined by default
	  by configure on systems which support it).

2007-09-10  Soren Hansen <shawarma@users.sourceforge.net>

	* Fix libmms to work with URL's that contain a query string.